--- a/web/src/components/CardTopic/style.module.scss
+++ b/web/src/components/CardTopic/style.module.scss
@@ -67,6 +67,17 @@
     text-align: justify;
     line-height: 1.4rem;
   }
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    .comments {
+      font-size: .8rem;
+      color: var.$text-secondary;
+      display: flex;
+      gap: .5rem;
+      align-items: center;
+    }
+  }
   .button {
     margin-top: .5rem;
       a {
