--- a/web/src/pages/Forum/style.module.scss
+++ b/web/src/pages/Forum/style.module.scss
@@ -40,7 +40,8 @@
         background-color: var.$gray500;
         color: var.$text-primary;
         outline: 0;
-        padding: 1rem;
+        height: 48px;
+        padding: .8rem;
         border: 1px solid var.$gray300;
         &:hover {
           border-color: var.$green700;
@@ -54,6 +55,11 @@
         min-height: 150px;
         max-height: 250px;
       }
+    }
+    .buttons {
+      display: flex;
+      align-items: center;
+      gap: 2rem;
     }
   }
   .list {
