--- a/web/src/pages/Schedule/style.module.scss
+++ b/web/src/pages/Schedule/style.module.scss
@@ -24,6 +24,33 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 2rem;
+    border-bottom: 2px solid var.$gray300;
+    padding-bottom: .5rem;
+  }
+  .user {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    .info {
+      display: flex;
+      flex-direction: column;
+      gap: .4rem;
+      .phone {
+        font-size: .8rem;
+        color: var.$text-secondary;
+        display: flex;
+        align-items: center;
+        gap: .4rem;
+      } 
+    }
+    > svg {
+      width: 38px;
+      height: 38px;
+      padding: .5rem;
+      border: 2px solid var.$green700;
+      background-color: var.$gray600;
+      border-radius: 99px;
+    }
   }
   .modalForm {
     margin-top: 1rem;
