--- a/web/src/pages/Topic/style.module.scss
+++ b/web/src/pages/Topic/style.module.scss
@@ -63,6 +63,18 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
+      .commentInfo {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .length {
+          color: var.$text-secondary;
+          font-size: .9rem;
+          display: flex;
+          gap: .5rem;
+          align-items: center;
+        }
+      }
       form {
         display: flex;
         flex-direction: column;
